[package]
name = "nimbleparse_toml"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfgrammar = { version = "0.13.1", features = ["serde"] }
lrpar = { version = "0.13.1", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.94", features = ["preserve_order"] }
toml = { version = "0.7.2", features = ["preserve_order"] }
